layout bug

--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@
   color: var(--led-colour);
 }
 
-fieldset {
+.layout {
   display: flex;
   flex-direction: column;
   align-items: center;
